# SlackBot

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: setup.md
scripts/: send_message.py
slackbot/: __init__.py  __main__.py  config.py  slack_api.py
tests/: test_cli.py
