[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "slackbot"
version = "0.1.0"
description = "A small Python package for sending Slack messages with a bot integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatchling.build.targets.wheel]
packages = ["slackbot"]
